test with an emoji

--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <html>
     <body>
-        <h1>Test Page</h1>
-
-        <p>What a nice webpage!</p>
+        <p>soon &#128038</p>
     </body>
 </html>
